# api/project.go
@@ -11,7 +11,13 @@ import (
 	"strconv"
 	"strings"
 )
-
+// @Summary 项目列表
+// @Description 项目列表
+// @accept json
+// @Produce  json
+// @Param projects body service.Project true "project"
+// @Success 200 {object} serializer.Response "{"status": 200,"data":{"item":[],total:0},"msg": "success" }"
+// @Router /project/list/{page} [get]
 func ProjectList(c *gin.Context) {
 	var page int64
 	if c.Param("page") != "/"{
@@ -23,6 +29,8 @@ func ProjectList(c *gin.Context) {
 			})
 		}
 		page = int64(p)
+	}else{
+		page = 1
 	}
 	if data,err := service.ProjectList(int64(page));err != nil{
 		c.JSON(http.StatusInternalServerError, serializer.PureErrorResponse{
@@ -30,11 +38,14 @@ func ProjectList(c *gin.Context) {
 			Msg:    err.Error(),
 		})
 	}else{
-		res := serializer.BuildListResponse(data,len(data))
-		res.Status = http.StatusOK
 		total, _ := module.CLIENT.Mongo.Database("makespace").Collection("projects").CountDocuments(context.Background(), bson.M{})
-		res.Msg = total
+		res := serializer.BuildListResponse(data,total)
+		res.Status = http.StatusOK
+		res.Msg = "success"
 		c.JSON(200,res)
 	}
 
+}
+func SearchProject(c *gin.Context){
+	c.PostForm("")
 }
