# docs/swagger.yaml
@@ -1,5 +1,16 @@
 basePath: /api/v1
 definitions:
+  module.Contact:
+    properties:
+      email:
+        type: string
+      phone:
+        type: string
+      qq:
+        type: string
+      wechat:
+        type: string
+    type: object
   serializer.Response:
     properties:
       data:
@@ -42,6 +53,34 @@ definitions:
     - name
     - phone
     - site
+    type: object
+  service.Project:
+    properties:
+      _id:
+        type: string
+      attach:
+        type: string
+      comment_count:
+        type: integer
+      contact:
+        $ref: '#/definitions/module.Contact'
+        type: object
+      creator:
+        type: string
+      info:
+        type: string
+      money:
+        type: number
+      project_name:
+        type: string
+      short_info:
+        type: string
+      start_time:
+        type: string
+      status:
+        type: integer
+      stop_time:
+        type: string
     type: object
   service.User:
     properties:
@@ -187,6 +226,27 @@ paths:
           schema:
             $ref: '#/definitions/serializer.Response'
       summary: 服务器状态检查
+  /project/list/{page}:
+    get:
+      consumes:
+      - application/json
+      description: 项目列表
+      parameters:
+      - description: project
+        in: body
+        name: projects
+        required: true
+        schema:
+          $ref: '#/definitions/service.Project'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"status": 200,"data":{"item":[],total:0},"msg": "success"
+            }'
+          schema:
+            $ref: '#/definitions/serializer.Response'
+      summary: 项目列表
   /registe:
     post:
       consumes:
